--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/types": "^7.2.4",
     "@types/js-cookie": "^3.0.3",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
+    "firebase": "^9.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
